<resources>
    <string name="app_name">SuperMarket</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password?</string>
    <string name="or">OR</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="login_as_a_guest">Login as a guest</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="register_user">Register User</string>
    <string name="full_name">Full Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="shop_name">Shop Name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_admin">Register Admin</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="price">Price</string>
    <string name="jod">JOD</string>
    <string name="about_us">About Us</string>
    <string name="who_are_we">Who Are We ?</string>
    <string name="add_information">Add Information</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="order_delivery_location">Order delivery location</string>
    <string name="sending_to_the_address">Sending to the address</string>
    <string name="receiving_from_the_site">Receiving from the site</string>
    <string name="receiving_address">Receiving Address :</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_when_receiving">Payment when receiving</string>
    <string name="visa_mastercard">VISA / MasterCard</string>
    <string name="order_summary">Order Summary</string>
    <string name="products_price">Products Price</string>
    <string name="total_price">Total Price</string>
    <string name="checkout">Checkout</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="add_category">Add Category</string>
    <string name="add_product">Add Product</string>
    <string name="delete_category_product">Delete Category/Product</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <!--    <string name="title_activity_final_step">FinalStepActivity</string>-->
</resources>