<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/nav_profile"
            android:title="My Profile" />

        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/nav_order"
            android:title="Orders" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/nav_cart"
            android:title="@string/cart" />

        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/nav_category"
            android:title="@string/add_category" />

        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/nav_product"
            android:title="@string/add_product" />

        <item
            android:id="@+id/nav_remove"
            android:icon="@drawable/nav_remove"
            android:title="@string/delete_category_product"/>

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/nav_about_us"
            android:title="@string/about_us" />

    </group>

    <item android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/nav_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>