<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lay_toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/shape_rect02"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextViewBig"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/img_hello"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo_dark_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lay_toolbar" />

    <EditText
        android:id="@+id/edt_email_login"
        style="@style/EditText"
        android:layout_marginTop="50dp"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/ic_mail_dark_pink"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_hello" />


    <EditText
        android:id="@+id/edt_password_login"
        style="@style/EditText"
        android:layout_marginTop="12dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_lock_dark_pink"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_login" />

    <Button
        android:id="@+id/btn_login"
        style="@style/ButtonText"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password_login" />

    <TextView
        android:id="@+id/txt_forget_password"
        style="@style/ClickText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/forget_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <TextView
        android:id="@+id/txt_or"
        style="@style/TextViewSmall"
        android:layout_marginTop="30dp"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_forget_password" />

    <TextView
        android:id="@+id/txt_do_not_have_an_account"
        style="@style/TextViewSmall"
        android:layout_marginStart="85dp"
        android:layout_marginTop="30dp"
        android:text="@string/dont_have_an_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_or" />

    <TextView
        android:id="@+id/txt_register"
        style="@style/ClickText"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/txt_do_not_have_an_account"
        app:layout_constraintTop_toBottomOf="@+id/txt_or" />

    <ProgressBar
        android:id="@+id/pb_category"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />


</androidx.constraintlayout.widget.ConstraintLayout>