<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.AboutUsFragment">

    <TextView
        android:id="@+id/txt_who_are_we"
        style="@style/TextViewBig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:shadowColor="@color/colorPrimary"
        android:shadowRadius="3"
        android:text="@string/who_are_we"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_info"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="monospace"
        android:paddingStart="10dp"
        android:text="@string/about_us"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txt_who_are_we" />

    <EditText
        android:id="@+id/edt_who_are_we"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="15dp"
        android:drawableLeft="@drawable/nav_about_us"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorPrimary"
        android:hint="Enter Info about your shop"
        android:inputType="text"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/txt_info" />

    <Button
        android:id="@+id/btn_who_are_we"
        style="@style/ButtonText"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/add_information"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_who_are_we" />

</androidx.constraintlayout.widget.ConstraintLayout>