<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ForgetPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lay_top"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/shape_rect02"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/img_btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:src="@drawable/ic_back_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/back"/>

        <TextView
            style="@style/TextViewBig"
            android:text="@string/reset_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


 <ImageView
     android:id="@+id/img_reset_password"
     android:layout_width="250dp"
     android:layout_height="250dp"
     android:layout_marginTop="50dp"
     android:src="@drawable/forgetpassword"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toBottomOf="@id/lay_top"/>


    <EditText
        android:id="@+id/edt_email_reset"
        style="@style/EditText"
        android:layout_marginTop="50dp"
        android:drawableStart="@drawable/ic_mail_dark_pink"
        android:drawablePadding="10dp"
        android:hint="Enter Your Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_reset_password"
        android:autofillHints="emailAddress"/>

    <Button
        android:id="@+id/btn_reset_password"
        style="@style/ButtonText"
        android:layout_marginTop="35dp"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_reset" />

</androidx.constraintlayout.widget.ConstraintLayout>